--- a/frontend/CV/index.html
+++ b/frontend/CV/index.html
@@ -9,5 +9,38 @@
         en la Facultad de Ciencias de la UNAM."> 
         <!-- Nota: El contenido es de hasta 160 caracteres. Se usa para escribir un resumen del sitio web.-->
     </head>
-    <body></body>
+    <body style = "font-family: Helvetica, Arial, sans-serif; margin: 0px;"> <!-- font-family: Se intentará usar la primera fuente, en caso de no tenerla disponible se pasará a la siguiente. text-aling: Modificar alineación del texto. .-->
+        <header style="background-color:#f5f5f5; color:black; text-align: center; padding: 16px;"> <!-- background-color: Sirve para cambiarle el color al fondo. color: cambia color al texto. padding: espacio de relleno requerido por todos los lados de un elemento. -->
+            <h1 style="display: inline-block; width:400px; font-weight: bold;">Ariana Fernández</h1> <!-- inline-block: Para que los elementos aparezcan uno al lado del otro. font-weight: Grozor del texto. -->
+            <p style="display: inline-block; font-weight: 200;">Bachelor Student of Computer Science</p>
+        </header>
+        <div style="background-color:#e0e0e0; text-align: center; padding: 12px;"> 
+            I am currently studying at Facultad de Ciencias, UNAM.
+        </div>
+        <section> <!-- Utilidad de section: Separar secciones para nuestra página.-->
+            <div style="width: 960px; margin-right:auto; margin-left: auto;">
+                <div>
+                    <h3 style="font-size: 35px;font-weight: bold; "> Education</h3>
+                    <div>
+                        <dl>
+                            <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> Facultad de Ciencias, Universidad Nacional Autónoma de México.</dt>
+                            <dd style="margin: 0px;"> Bachelor Degree in Computer Science. August, 2018 - Present. </dd>
+                            
+                        </dl>
+                    </div>
+                </div>
+                <div style="margin-top: 60px;"> 
+                    <h3 style="font-size: 35px;font-weight: bold; "> Courses</h3>
+                    <div>
+                        <dl>
+                            <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> PROTECO, Universidad Nacional Autónoma de México.</dt>
+                            <dd style="margin: 0px;"> Finished training courses in Object Oriented Programming with Java. January, 2019. </dd>
+                            <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> PROTECO, Universidad Nacional Autónoma de México.</dt>
+                            <dd style="margin: 0px;"> Finished training courses in Object Oriented Programming with Python. July, 2019. </dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
