--- a/frontend/CV/index.html
+++ b/frontend/CV/index.html
@@ -14,30 +14,103 @@
             <h1 style="display: inline-block; width:400px; font-weight: bold;">Ariana Fernández</h1> <!-- inline-block: Para que los elementos aparezcan uno al lado del otro. font-weight: Grozor del texto. -->
             <p style="display: inline-block; font-weight: 200;">Bachelor Student of Computer Science</p>
         </header>
-        <div style="background-color:#e0e0e0; text-align: center; padding: 12px;"> 
-            I am currently studying at Facultad de Ciencias, UNAM.
+        <div style="background-color:#e0e0e0;  text-align: center; padding: 2px;"> 
+            <!-- I am currently studying at Facultad de Ciencias, UNAM.-->
+            <p style="display: inline-block; width:200px; font-weight: 50;"> <a href = "mailto: ari.fermont@gmail.com">ari.fermont@gmail.com</a> </p>
+            <p style="display: inline-block; width:200px; font-weight: 50;"> <a href="https://www.linkedin.com/in/arianafndz/" target="_blank"> linkedin.com/in/arianafndz </a> </p>
+            <p style="display: inline-block; width:200px; font-weight: 50;"> <a href="https://github.com/arianafm" target="_blank"> github.com/arianafm </a> </p>
         </div>
         <section> <!-- Utilidad de section: Separar secciones para nuestra página.-->
             <div style="width: 960px; margin-right:auto; margin-left: auto;">
                 <div>
                     <h3 style="font-size: 35px;font-weight: bold; "> Education</h3>
+                    <hr>
                     <div>
                         <dl>
-                            <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> Facultad de Ciencias, Universidad Nacional Autónoma de México.</dt>
-                            <dd style="margin: 0px;"> Bachelor Degree in Computer Science. August, 2018 - Present. </dd>
-                            
+                            <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;display: inline-block;  width:788px; "> Facultad de Ciencias, Universidad Nacional Autónoma de México.</dt>
+                            <dd style="margin: 0px; font-style: oblique; display: inline-block; "> GPA: 9.3/10 </dd>
+                            <dd style="margin: 0px; font-style: oblique; display: inline-block;  width:700px;"> Bachelor Degree in Computer Science. </dd>
+                            <dd style="margin: 0px; font-style: oblique; display: inline-block;"> August, 2018 - Present. </dd>
                         </dl>
                     </div>
                 </div>
                 <div style="margin-top: 60px;"> 
                     <h3 style="font-size: 35px;font-weight: bold; "> Courses</h3>
+                    <hr>
                     <div>
                         <dl>
                             <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> PROTECO, Universidad Nacional Autónoma de México.</dt>
-                            <dd style="margin: 0px;"> Finished training courses in Object Oriented Programming with Java. January, 2019. </dd>
+                            <dd style="margin: 0px; font-style: oblique;display: inline-block;  width:765px;"> Finished training courses in Object Oriented Programming with Java. </dd>
+                            <dd style="margin: 0px; font-style: oblique; display: inline-block;"> January, 2019. </dd>
                             <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> PROTECO, Universidad Nacional Autónoma de México.</dt>
-                            <dd style="margin: 0px;"> Finished training courses in Object Oriented Programming with Python. July, 2019. </dd>
+                            <dd style="margin: 0px; font-style: oblique;display: inline-block;  width:795px;"> Finished training courses in Object Oriented Programming with Python.  </dd>
+                            <dd style="margin: 0px; font-style: oblique; display: inline-block;"> July, 2019. </dd>
                         </dl>
+                    </div>
+                </div>
+                <div style="margin-top: 60px;"> 
+                    <h3 style="font-size: 35px;font-weight: bold; "> Experience</h3>
+                    <hr>
+                    <div>
+                        <dl>
+                            <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> Instituto de Matemáticas, Universidad Nacional Autónoma de México.</dt>
+                            <dd style="margin: 0px;font-style: oblique;display: inline-block;  width:790px;"> Volunteer.  </dd>
+                            <dd style="margin: 0px; font-style: oblique; display: inline-block;"> April, 2019. </dd>
+                            <ul>
+                                <li>Led a three-week project with five team members to design games for <br> 
+                                    children and adults to help them understand basic mathematics concepts.</li>
+                            </ul>
+                        </dl>
+                    </div>
+                </div>
+                <div style="margin-top: 60px; margin-bottom: 90px;"> 
+                    <h3 style="font-size: 35px;font-weight: bold; "> Projects</h3>
+                    <hr>
+                    <div>
+                        <dl>
+                            <dt style="font-style: 25px; margin-bottom: 10px; margin-top: 30px;display: inline-block;  width:770px;"> <b>Web Service</b>  | <i>Python</i> </dt>
+                            <dd style="margin: 0px;display: inline-block;"> <i>August, 2019.</i> </dd>
+                            <ul>
+                                <li>Developed a console application that can be used on an airport to give <br> 
+                                    the weather from departure city and arrival city.</li>
+                                <li>Developed using OpenWeatherMap API.</li>
+                            </ul>
+                            <dt style="font-style: 25px;  margin-bottom: 10px; margin-top: 30px; display: inline-block;  width:794px;"> <b>Twitter Bot</b>  | <i>Python</i> </dt>
+                            <dd style="margin: 0px;display: inline-block;"> <i>July, 2019.</i> </dd>
+                            <ul>
+                                <li>Developed a Twitter console app.</li>
+                                <li>Used Twitter’s API and the Tweepy module.</li>
+                            </ul>
+                            <dt style="font-style: 25px;  margin-bottom: 10px; margin-top: 30px;display: inline-block;  width:786px;"> <b>T-Rex Game</b>  | <i>Python</i> </dt>
+                            <dd style="margin: 0px;display: inline-block; "> <i>June, 2019.</i> </dd>
+                            <ul>
+                                <li>Developed a clone of the T-Rex game of Google.</li>
+                                <li>Applied the knowledge about GUI interfaces in Python.</li>
+                                <li>Used different Python libraries.</li>
+                            </ul>
+                            <dt style="font-style: 25px;  margin-bottom: 10px; margin-top: 30px;display: inline-block;  width:772px;"> <b>Word Finder</b>  | <i>Python</i> </dt>
+                            <dd style="margin: 0px;display: inline-block;  "> <i>August, 2019.</i> </dd>
+                            <ul>
+                                <li>Developed a console application that with the use of regular expressions <br> 
+                                    can find on a text: emails, dates, IP addresses, among others.</li>
+                                <li>Developed using regular expressions.</li>
+                            </ul>
+                        </dl>
+                    </div>
+                    <div style="margin-top: 60px;"> 
+                        <h3 style="font-size: 35px;font-weight: bold; "> Technical Skills</h3>
+                        <hr>
+                        <div>
+                            <dl>
+                                <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> Programming Languages:</dt>
+                                <dd style="margin: 0px; "> <i>2 years:</i> Java, Python. </dd>
+                                <dd style="margin: 0px;"> <i>6 months:</i> Haskell, SQL (Postgres), MYSQL (Workbench), Racket. </dd>
+                                <dt style="font-style: 25px; font-weight: bold; margin-bottom: 10px; margin-top: 30px;"> Languages:</dt>
+                                <dd style="margin: 0px;"> Spanish (Native), English (Intermediate) </dd>
+                                <dt style="font-style: 25px; margin-bottom: 10px; margin-top: 30px;"> <b>Technologies:</b> <br> <i>Basic Knowledge</i></dt>
+                                <dd style="margin: 0px;"> HTML, CSS, Git, MySQL, LaTeX, Microsoft Office </dd>
+                            </dl>
+                        </div>
                     </div>
                 </div>
             </div>
