Terminando quinto bloque: CSS.

--- a/boletines/index.html
+++ b/boletines/index.html
@@ -6,21 +6,24 @@
         <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
         <link href="./fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet">
         <link href="./assets/css/main.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
         <div class="container">
-            <div class="content">
+            <div class="content animate__animated animate__fadeInDown">
                 <header>
-                    <h1>Lorem Ipsum</h1>
+                    <h1 class="title">Lorem Ipsum</h1>
                 </header>
-                <table>
+                <table class="table">
                     <thead> <!-- Encabezado -->
                         <th> Lorem</th>
                         <th> ipsum </th>
                         <th> dolor </th>
                         <th> sit </th>
                         <th> amet </th>
-                        <th> icon </th>
+                        <th> iconos </th>
                          <th> acciones </th> <!-- Links que nos redirigen a los documentos correspondientes. -->
                     </thead>
                     <tbody> <!-- Cuerpo -->
@@ -47,6 +50,9 @@
                             <td>
                                 <i class="fas fa-star"></i>
                             </td>
+                            <td>
+                                <a href="./restaurantes/mafalda.html">Ver más.</a>
+                            </td>
                         </tr>
                         <tr>
                             <td>Aenean molestie diam quis odio finibus luctus.</td>
@@ -56,6 +62,23 @@
                             <td>Ut pulvinar eleifend turpis.</td>
                             <td>
                                 <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i> <!-- Estrella vacía -->
+                            </td>
+                            <td>
+                                <a href="./restaurantes/mafalda.html">Ver más.</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Aenean molestie diam quis odio finibus luctus.</td>
+                            <td>Maecenas ac venenatis lorem.</td>
+                            <td>Aliquam ac vestibulum mauris, </td>
+                            <td>id imperdiet erat.</td>
+                            <td>Ut pulvinar eleifend turpis.</td>
+                            <td>
+                                <i class="fas fa-star"></i>
+                            </td>
+                            <td>
+                                <a href="./restaurantes/mafalda.html">Ver más.</a>
                             </td>
                         </tr>
                     </tbody>
