Terminando sexto bloque: Diseño Responsivo

--- a/boletines/restaurantes/mafalda.html
+++ b/boletines/restaurantes/mafalda.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Lorem Ipsum </title>
         <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
         <!-- Colocamos los dos puntos para estar a un nivel superior en nuestras carpetas -->
