--- a/boletines/index.html
+++ b/boletines/index.html
@@ -86,5 +86,6 @@
                 </table>
             </div>
         </div>
+        <script src="../boletines/javascript/main.js"></script>
     </body>
 </html>
