--- a/boletines/restaurantes/mafalda.html
+++ b/boletines/restaurantes/mafalda.html
@@ -43,5 +43,6 @@
                 </section>
             </div>
         </div>
+        <script src="../javascript/main.js"></script>
     </body>
 </html>
